--- a/pages/learn.html
+++ b/pages/learn.html
@@ -230,7 +230,47 @@
                               </div>
                               <div id="collapse2_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                   <div class="panel-body">
-                                    <iframe src="https://drive.google.com/embeddedfolderview?id=16CAtLXFsGklV-MHQAJSlw9EKc0sS_Z4B#list" style="width:100%; height:100%; border:0;"></iframe>
+
+                                    <!-- Cards Grid-->
+                                    <section data-bs-version="5.1" class="features3 cid-t16lhyK4qd" id="features3-2k">
+                                        <div class="container">
+                                            <div class="row mt-4">
+
+                                    <!-- new Cards-->
+                                    <div class="item features-image сol-12 col-md-6 col-lg-3">
+                                    <div class="item-wrapper">
+                                    <div class="item-img">
+                                    <img src="https://www.gabrielavelitch.com/img/site/spectrogram.webp" data-slide-to="0" data-bs-slide-to="0">
+                                    </div>
+                                    <div class="item-content">
+                                    <h5 class="item-title mbr-fonts-style display-7">
+                                    <br><strong>Storia della Musica Elettroacustica</strong></h5>
+                                    </div>
+                                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                                    &gt;</a></div>
+                                    </div>
+                                    </div>
+                                    <!-- new Cards-->
+                                    <div class="item features-image сol-12 col-md-6 col-lg-3">
+                                    <div class="item-wrapper">
+                                    <div class="item-img">
+                                    <img src="https://www.gabrielavelitch.com/img/site/stockhausen.webp" data-slide-to="1" data-bs-slide-to="1">
+                                    </div>
+                                    <div class="item-content">
+                                    <h5 class="item-title mbr-fonts-style display-7">
+                                    <br><strong>Il Paradigma di Stockhausen</strong></h5>
+                                    </div>
+                                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                                    &gt;</a></div>
+                                    </div>
+                                    </div>
+
+                                    </div>
+                                    </div>
+                                    </div>
+                                    </div>
+                                    <!-- end Cards Grid-->
+
                                   </div>
                               </div>
                           </div>
