--- a/pages/learn.html
+++ b/pages/learn.html
@@ -175,7 +175,7 @@
                           <div class="card mb-3">
                               <div class="card-header" role="tab" id="headingTwo">
                                   <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_2" aria-expanded="false" aria-controls="collapse2">
-                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Composition</strong></h6>
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Laboratories</strong></h6>
                                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                   </a>
                               </div>
@@ -190,31 +190,17 @@
 <div class="item features-image сol-12 col-md-6 col-lg-3">
     <div class="item-wrapper">
         <div class="item-img">
-            <img src="https://www.gabrielavelitch.com/img/site/spectrogram.webp" data-slide-to="0" data-bs-slide-to="0">
+            <img src="https://www.gabrielavelitch.com/img/site/graphscore.webp" data-slide-to="1" data-bs-slide-to="1">
         </div>
         <div class="item-content">
             <h5 class="item-title mbr-fonts-style display-7">
-              <br><strong>Storia della Musica Elettroacustica</strong></h5>
+              <br><strong>Laboratorio di Tecnologie Musicali</strong></h5>
         </div>
-        <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+        <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/laboratorio_di_tecnologie_musicali.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                 &gt;</a></div>
     </div>
 </div>
 <!-- new Cards-->
-<div class="item features-image сol-12 col-md-6 col-lg-3">
-    <div class="item-wrapper">
-        <div class="item-img">
-            <img src="https://www.gabrielavelitch.com/img/site/stockhausen.webp" data-slide-to="1" data-bs-slide-to="1">
-        </div>
-        <div class="item-content">
-            <h5 class="item-title mbr-fonts-style display-7">
-              <br><strong>Il Paradigma di Stockhausen</strong></h5>
-        </div>
-        <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
-                &gt;</a></div>
-      </div>
-  </div>
-
                                   </div>
                               </div>
                           </div>
