--- a/pages/learn.html
+++ b/pages/learn.html
@@ -250,6 +250,35 @@
                                     &gt;</a></div>
                                     </div>
                                     </div>
+                                    <!-- new Cards-->
+                                    <div class="item features-image сol-12 col-md-6 col-lg-3">
+                                        <div class="item-wrapper">
+                                            <div class="item-img">
+                                                <img src="https://www.gabrielavelitch.com/img/site/storiadue.webp" data-slide-to="2" data-bs-slide-to="2">
+                                            </div>
+                                            <div class="item-content">
+                                                <h5 class="item-title mbr-fonts-style display-7">
+                                                  <br><strong>Storia della Musica 1</strong></h5>
+                                            </div>
+                                            <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming soon
+                                                    &gt;</a></div>
+                                        </div>
+                                    </div>
+                                    <!-- new Cards-->
+                                    <div class="item features-image сol-12 col-md-6 col-lg-3">
+                                        <div class="item-wrapper">
+                                            <div class="item-img">
+                                                <img src="https://www.gabrielavelitch.com/img/site/storiadue.webp" data-slide-to="3" data-bs-slide-to="3">
+                                            </div>
+                                            <div class="item-content">
+                                                <h5 class="item-title mbr-fonts-style display-7">
+                                                  <br><strong>Storia della Musica 2</strong></h5>
+                                            </div>
+                                            <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming soon
+                                                    &gt;</a></div>
+                                        </div>
+                                    </div>
+                                    <!-- new Cards-->
 
                                     </div>
                                     </div>
