--- a/pages/learn.html
+++ b/pages/learn.html
@@ -122,14 +122,47 @@
               <div class="row justify-content-center">
                   <div class="col-12 col-md-10">
                       <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
+
+                        <div class="card mb-3">
+                            <div class="card-header" role="tab" id="headingOne">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_2" aria-expanded="false" aria-controls="collapse1">
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Analysis</strong></h6>
+                                    <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                </a>
+                            </div>
+                            <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div class="panel-body">
+
+                                  <!-- Cards Grid-->
+                                  <section data-bs-version="5.1" class="features3 cid-t16lhyK4qd" id="features3-2k">
+                                      <div class="container">
+                                          <div class="row mt-4">
+
+                        <!-- new Cards-->
+                                            <div class="item features-image сol-12 col-md-6 col-lg-3">
+                                                <div class="item-wrapper">
+                                                    <div class="item-img">
+                                                        <img src="https://www.gabrielavelitch.com/img/site/spettro.webp" data-slide-to="2" data-bs-slide-to="2">
+                                                    </div>
+                                                    <div class="item-content">
+                                                        <h5 class="item-title mbr-fonts-style display-7">
+                                                          <br><strong>Analisi Compositiva</strong></h5>
+                                                    </div>
+                                                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                                                            &gt;</a></div>
+                                                </div>
+                                            </div>
+                        <!-- new Cards-->
+
+
                           <div class="card mb-3">
-                              <div class="card-header" role="tab" id="headingOne">
-                                  <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_2" aria-expanded="false" aria-controls="collapse1">
+                              <div class="card-header" role="tab" id="headingTwo">
+                                  <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_2" aria-expanded="false" aria-controls="collapse2">
                                       <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Analysis</strong></h6>
                                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                   </a>
                               </div>
-                              <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                              <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                   <div class="panel-body">
 
                                     <!-- Cards Grid-->
@@ -173,13 +206,13 @@
 <!-- end Cards Grid-->
 
                           <div class="card mb-3">
-                              <div class="card-header" role="tab" id="headingTwo">
-                                  <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_2" aria-expanded="false" aria-controls="collapse2">
+                              <div class="card-header" role="tab" id="headingThree">
+                                  <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_2" aria-expanded="false" aria-controls="collapse3">
                                       <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Laboratories</strong></h6>
                                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                   </a>
                               </div>
-                              <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                              <div id="collapse3_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                   <div class="panel-body">
                                     <!-- Cards Grid-->
                                     <section data-bs-version="5.1" class="features3 cid-t16lhyK4qd" id="features3-2k">
@@ -208,13 +241,13 @@
 <!-- end Cards Grid-->
 
                           <div class="card mb-3">
-                              <div class="card-header" role="tab" id="headingThree">
-                                  <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_3" aria-expanded="false" aria-controls="collapse3">
+                              <div class="card-header" role="tab" id="headingFour">
+                                  <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_3" aria-expanded="false" aria-controls="collapse4">
                                       <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>History</strong></h6>
                                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                   </a>
                               </div>
-                              <div id="collapse2_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                              <div id="collapse4_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour">
                                   <div class="panel-body">
 
                                     <!-- Cards Grid-->
