--- a/pages/learn.html
+++ b/pages/learn.html
@@ -126,7 +126,7 @@
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingOne">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_2" aria-expanded="false" aria-controls="collapse1">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Analysis</strong></h6>
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Acoustic</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
@@ -146,7 +146,7 @@
                                                     </div>
                                                     <div class="item-content">
                                                         <h5 class="item-title mbr-fonts-style display-7">
-                                                          <br><strong>Analisi Compositiva</strong></h5>
+                                                          <br><strong>Acustica degli Ambienti Musicali</strong></h5>
                                                     </div>
                                                     <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                                                             &gt;</a></div>
