--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -85,6 +85,20 @@
 </section>
 
 
+<!-- Image-->
+      <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+          <div class="container-fluid">
+              <div class="row justify-content-center">
+                  <div class="col-12 col-lg-5">
+                      <div class="image-wrapper">
+                          <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/01_sorgente_ascoltatore.png" alt="www.gabrielavelitch.com">
+                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 4_2</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+
   <!-- Text-->
 
 
