--- a/pages/learn.html
+++ b/pages/learn.html
@@ -130,7 +130,7 @@
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
-                            <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
 
                                   <!-- Cards Grid-->
@@ -142,7 +142,7 @@
                                             <div class="item features-image сol-12 col-md-6 col-lg-3">
                                                 <div class="item-wrapper">
                                                     <div class="item-img">
-                                                        <img src="https://www.gabrielavelitch.com/img/site/spettro.webp" data-slide-to="2" data-bs-slide-to="2">
+                                                        <img src="https://www.gabrielavelitch.com/img/site/spettro.webp" data-slide-to="1" data-bs-slide-to="1">
                                                     </div>
                                                     <div class="item-content">
                                                         <h5 class="item-title mbr-fonts-style display-7">
