--- a/pages/learn.html
+++ b/pages/learn.html
@@ -153,7 +153,11 @@
                                                 </div>
                                             </div>
                         <!-- new Cards-->
-
+                      </div>
+                  </div>
+              </div>
+</div>
+<!-- end Cards Grid-->
 
                           <div class="card mb-3">
                               <div class="card-header" role="tab" id="headingTwo">
