--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -114,7 +114,7 @@
                     <ul>
                       <li>Tipo di segnale (come è fatto dal punto di vista spettro temporale)</li>
                       <li>Funzione di direttività o di emissione (qual'è il diagramma di potenza in funzione dell'angolo spaziale)</li>
-                     `<li>Posizione</li>
+                      <li>Posizione</li>
                    </ul>
                      <div class="container">
                          <div class="row justify-content-center">
