--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -85,31 +85,43 @@
 </section>
 
 
-<!-- Image-->
-      <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-          <div class="container-fluid">
-              <div class="row justify-content-center">
-                  <div class="col-12 col-lg-5">
-                      <div class="image-wrapper">
-                          <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/01_sorgente_ascoltatore.png" alt="www.gabrielavelitch.com">
-                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 4_2</p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </section>
-
   <!-- Text-->
-
-
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+<section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
                     L'obiettivo è studiare il campo emesso da una sorgente all'interno di uno spazio e come viene ricevuto da un ascoltatore in un altro punto dello spazio. Lo studio dell'acustica degli ambienti è estremamente complesso in quanto le variabili e i gradi di libertà in gioco sono tanti.
+                  </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+                    <!-- Image-->
+                          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                              <div class="container-fluid">
+                                  <div class="row justify-content-center">
+                                      <div class="col-12 col-lg-5">
+                                          <div class="image-wrapper">
+                                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/01_sorgente_ascoltatore.png" alt="www.gabrielavelitch.com">
+                                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 4_2</p>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </section>
+
+<!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Definiamo alcune variabili in base al loro contesto:
                     <br>
-                    <br>
+                    <br> 
                     <b>Sorgente:</b>
                     <ul>
                       <li>Tipo di segnale (come è fatto dal punto di vista spettro temporale)</li>
