--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -106,7 +106,7 @@
                                       <div class="col-12 col-lg-5">
                                           <div class="image-wrapper">
                                               <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/01_sorgente_ascoltatore.png" alt="www.gabrielavelitch.com">
-                                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 4_2</p>
+                                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
                                           </div>
                                       </div>
                                   </div>
@@ -121,7 +121,7 @@
                   <p class="mbr-text mbr-fonts-style display-7">
                     Definiamo alcune variabili in base al loro contesto:
                     <br>
-                    <br> 
+                    <br>
                     <b>Sorgente:</b>
                     <ul>
                       <li>Tipo di segnale (come è fatto dal punto di vista spettro temporale)</li>
