--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -119,7 +119,7 @@
           <div class="row justify-content-center">
             <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    Definiamo alcune variabili in base al loro contesto:
+                    Definiamo alcune variabili in base al contesto:
                     <br>
                     <br>
                     <b>Sorgente:</b>
@@ -128,7 +128,6 @@
                       <li>Funzione di direttività o di emissione (qual'è il diagramma di potenza in funzione dell'angolo spaziale)</li>
                       <li>Posizione</li>
                    </ul>
-                     <div class="container">
                          <div class="row justify-content-center">
                              <div class="col-md-12 col-lg-8">
                                  <p class="mbr-text mbr-fonts-style display-7">
@@ -137,7 +136,6 @@
                     <ul>
                     <li>Funzione spaziale di ricezione o di sensibilità</li>
                     <li>Posizione (a seconda della posizione reciproca tra sorgente e ascoltatore ogni volta otterrò una risposta diversa)</li>
-                    <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-md-12 col-lg-8">
                                 <p class="mbr-text mbr-fonts-style display-7">
