--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -138,7 +138,12 @@
                   </ul>
                     <b>Spazio:</b>
                     <ul>
-                    <li>Geometria</li>
+                    <li>Geometria (una delle cose più difficili sta nella generalizzazione di uno spazio con una forma qualunque.
+                      Esistono software in grado elaborare geometrie complesse, es. AutoCAD.
+                      La sensibilità nei confronti dell'acustica degli ambienti è una situazione abbastanza recente,
+                      prima questa attenzione veniva destinata unicamente a spazi destinati ad uso acustico quali sale da concerto, auditorium, studi di registrazione).
+                      
+                    </li>
                     <li>Materiali</li>
                   </ul>
                   </p>
