--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -142,9 +142,8 @@
                       Esistono software in grado elaborare geometrie complesse, es. AutoCAD.
                       La sensibilità nei confronti dell'acustica degli ambienti è una situazione abbastanza recente,
                       prima questa attenzione veniva destinata unicamente a spazi destinati ad uso acustico quali sale da concerto, auditorium, studi di registrazione).
-                      
                     </li>
-                    <li>Materiali</li>
+                    <li>Materiali (lo spazio è hanno un impatto sia sulla capacità di assorbire o riflettere l'energia acustica, sia sulla diffusione dell'energia da un punto di vista spaziale: ogni superficie ha una risposta diversa nei confronti dell'onda acustica che dipende dalla relazione che c'è tra la lunghezza d'onda del campo acustico e le dimensioni del profilo della superficie riflettente)</li>
                   </ul>
                   </p>
                 </div>
