--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -145,13 +145,35 @@
                     </li>
                     <li>Materiali (lo spazio tipicamente è una struttura fatta di materiali diversi; essi hanno un impatto sia sulla capacità di assorbire o riflettere l'energia acustica, sia sulla diffusione dell'energia da un punto di vista spaziale: ogni superficie ha una risposta diversa nei confronti dell'onda acustica che dipende dalla relazione che c'è tra la lunghezza d'onda del campo acustico e le dimensioni del profilo della superficie riflettente).</li>
                   </ul>
-                  </p>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Gli aspetti sopra elencati sono tra i più rilevanti nello studio della propagazione negli spazi, detti così sembrano anche molto semplici, ma considerati da un punto di vista o matematico o di simulazione, anche situazioni molto semplici possono portare a una complessità difficile da trattare sia in forma matematica sia in forma approssimata attravero una simulazione al computer.
+                    <br>
+                    <br>
+                    Volessimo tradurre questa cosa in una relazione matematica, potremmo dire che l'uscita(y)
+                    <br>
+                    <br>
+                    Schema generale di un processo di elaborazione di un segnale da parte di un sistema:
+                    <ul>
+                    <li>(x)ingresso: segnale</li>
+                    <li>(h)sistema: risposta all'impulso</li>
+                    <li>(y)uscita: convoluzione tra (x) e (h)</li>
+                  </ul>
                 </div>
             </div>
         </div>
     </section>
 
+Gli aspetti sopra elencati sono tra i più rilevanti nello studio della propagazione negli spazi, detti così sembrano anche molto semplici, ma considerati da un punto di vista o matematico o di simulazione, anche situazioni molto semplici possono portare a una complessità difficile da trattare sia in forma matematica sia in forma approssimata attravero una simulazione al computer.
 
+Volessimo tradurre questa cosa in una relazione matematica, potremmo dire che l'uscita(y)
+
+Schema generale di un processo di elaborazione di un segnale da parte di un sistema:
+
+(x)ingresso: segnale
+(h)sistema: risposta all'impulso
+(y)uscita: convoluzione tra (x) e (h)
+
+Questo modello è utile a descrivere diverse situazioni. Nel nostro caso possiamo pensare lo spazio come una sorta filtro, di sistema che prende in ingresso un segnale(x) e lo trasforma per farlo ascoltare ad un ascoltatore, però con la differenza che questa (x) è in funzione non solo del <b>tempo(t)</b>, ma anche del <b>diagramma di emissione ()</b>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
