--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -148,7 +148,7 @@
                     Gli aspetti sopra elencati sono tra i più rilevanti nello studio della propagazione negli spazi, detti così sembrano anche molto semplici, ma considerati da un punto di vista o matematico o di simulazione, anche situazioni molto semplici possono portare a una complessità difficile da trattare sia in forma matematica sia in forma approssimata attravero una simulazione al computer.
                     <br>
                     <br>
-                    Volessimo tradurre questa cosa in una relazione matematica, potremmo dire che l'uscita(y)
+                    Volessimo tradurre questa cosa in una relazione matematica, potremmo dire che l'<b>uscita(y)</b>
                     <br>
                     <br>
                     Schema generale di un processo di elaborazione di un segnale da parte di un sistema:
@@ -157,12 +157,25 @@
                     <li>(h)sistema: risposta all'impulso</li>
                     <li>(y)uscita: convoluzione tra (x) e (h)</li>
                   </ul>
+                  <p class="mbr-text mbr-fonts-style display-7">
+                    Questo modello è utile a descrivere diverse situazioni.
+                    Nel nostro caso possiamo pensare lo spazio come una sorta filtro, di sistema che prende in ingresso un <b>segnale(x)</b> e lo trasforma per farlo ascoltare ad un ascoltatore,
+                    però con la differenza che questa (x) è in funzione non solo del <b>tempo(t)</b>, ma anche del <b>diagramma di emissione(𐌘)</b>,
+                    che è a sua volta in funzione di due angoli (riferimento polare piuttosto che cartesiano) che fanno riferimento a due piani: <b>piano orizzontale(α)</b> e <b>piano verticale(θ)</b>.
+                    Nella funzione di emissione il modulo non ha alcun peso, quindi consideriamo solo azimut e zenit.
+                    <ul>
+                    <li>(𐌘)funzione a tre dimensione che descrive la potenza di emissione della sorgente in una data direzione nello spazio</li>
+                    <li>(α)azimut</li>
+                    <li>(θ)zenit</li>
+                  </ul>
+                    <p class="mbr-text mbr-fonts-style display-7">
+
                 </div>
             </div>
         </div>
     </section>
 
-Gli aspetti sopra elencati sono tra i più rilevanti nello studio della propagazione negli spazi, detti così sembrano anche molto semplici, ma considerati da un punto di vista o matematico o di simulazione, anche situazioni molto semplici possono portare a una complessità difficile da trattare sia in forma matematica sia in forma approssimata attravero una simulazione al computer.
+Gli aspetti sopra elencati sono tra i più rilevanti nello studio della propagazione negli spazi. Detti così sembrano anche molto semplici, ma considerati da un punto di vista o matematico o di simulazione, anche situazioni molto semplici possono portare a una complessità difficile da trattare sia in forma matematica sia in forma approssimata attravero una simulazione al computer.
 
 Volessimo tradurre questa cosa in una relazione matematica, potremmo dire che l'uscita(y)
 
@@ -172,7 +185,17 @@ Schema generale di un processo di elaborazione di un segnale da parte di un sist
 (h)sistema: risposta all'impulso
 (y)uscita: convoluzione tra (x) e (h)
 
-Questo modello è utile a descrivere diverse situazioni. Nel nostro caso possiamo pensare lo spazio come una sorta filtro, di sistema che prende in ingresso un segnale(x) e lo trasforma per farlo ascoltare ad un ascoltatore, però con la differenza che questa (x) è in funzione non solo del <b>tempo(t)</b>, ma anche del <b>diagramma di emissione ()</b>
+Questo modello è utile a descrivere diverse situazioni.
+Nel nostro caso possiamo pensare lo spazio come una sorta filtro, di sistema che prende in ingresso un segnale(x) e lo trasforma per farlo ascoltare ad un ascoltatore,
+però con la differenza che questa (x) è in funzione non solo del <b>tempo(t)</b>, ma anche del <b>diagramma di emissione(𐌘)</b>,
+che è a sua volta in funzione di due angoli (riferimento polare piuttosto che cartesiano) che fanno riferimento a due piani: piano orizzontale(α) e piano verticale(θ).
+Nella funzione di emissione il modulo non ha alcun peso, quindi consideriamo solo azimut e zenit.
+
+(𐌘)funzione a tre dimensione che descrive la potenza di emissione della sorgente in una data direzione nello spazio
+(α)azimut
+(θ)zenit
+
+
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
