--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -153,20 +153,20 @@
                     <br>
                     Schema generale di un processo di elaborazione di un segnale da parte di un sistema:
                     <ul>
-                    <li>(x)ingresso: segnale</li>
-                    <li>(h)sistema: risposta all'impulso</li>
-                    <li>(y)uscita: convoluzione tra (x) e (h)</li>
+                    <li><b>(x)ingresso: segnale</b></li>
+                    <li><b>(h)sistema: risposta all'impulso</b></li>
+                    <li><b>(y)uscita: convoluzione tra (x) e (h)</b></li>
                   </ul>
                   <p class="mbr-text mbr-fonts-style display-7">
                     Questo modello è utile a descrivere diverse situazioni.
                     Nel nostro caso possiamo pensare lo spazio come una sorta filtro, di sistema che prende in ingresso un <b>segnale(x)</b> e lo trasforma per farlo ascoltare ad un ascoltatore,
                     però con la differenza che questa (x) è in funzione non solo del <b>tempo(t)</b>, ma anche del <b>diagramma di emissione(𐌘)</b>,
-                    che è a sua volta in funzione di due angoli (riferimento polare piuttosto che cartesiano) che fanno riferimento a due piani: <b>piano orizzontale(α)</b> e <b>piano verticale(θ)</b>.
+                    che è a sua volta in funzione di due angoli (sistema polare piuttosto che cartesiano) che fanno riferimento a due piani: <b>piano orizzontale(α)</b> e <b>piano verticale(θ)</b>.
                     Nella funzione di emissione il modulo non ha alcun peso, quindi consideriamo solo azimut e zenit.
                     <ul>
-                    <li>(𐌘)funzione a tre dimensione che descrive la potenza di emissione della sorgente in una data direzione nello spazio</li>
-                    <li>(α)azimut</li>
-                    <li>(θ)zenit</li>
+                    <li><b>(𐌘)funzione a tre dimensione che descrive la potenza di emissione della sorgente in una data direzione nello spazio</b></li>
+                    <li><b>(α)azimut</b></b></li>
+                    <li><b>(θ)zenit</b></li>
                   </ul>
                     <p class="mbr-text mbr-fonts-style display-7">
 
