--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -148,10 +148,41 @@
                     Gli aspetti sopra elencati sono tra i più rilevanti nello studio della propagazione negli spazi, detti così sembrano anche molto semplici, ma considerati da un punto di vista o matematico o di simulazione, anche situazioni molto semplici possono portare a una complessità difficile da trattare sia in forma matematica sia in forma approssimata attravero una simulazione al computer.
                     <br>
                     <br>
-                    Volessimo tradurre questa cosa in una relazione matematica, potremmo dire che l'<b>uscita(y)</b>
+                    Volessimo tradurre questa cosa in una relazione matematica, potremmo dire:
                     <br>
                     <br>
-                    Schema generale di un processo di elaborazione di un segnale da parte di un sistema:
+                    <p text-align: center;>
+                    <b>y = x * h<b>
+                    </p>
+                    <br>
+                    <br>
+                    Possiamo esprimere questa formula con lo schema generale di un processo di elaborazione di un segnale da parte di un sistema, quale:
+                  </p>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+      <!-- Image-->
+            <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                <div class="container-fluid">
+                    <div class="row justify-content-center">
+                        <div class="col-12 col-lg-5">
+                            <div class="image-wrapper">
+                                <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/02_sistema.png" alt="www.gabrielavelitch.com">
+                                <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+      <!-- Text-->
+          <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+              <div class="container">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-8">
+                        <p class="mbr-text mbr-fonts-style display-7">
                     <ul>
                     <li><b>(x)ingresso: segnale</b></li>
                     <li><b>(h)sistema: risposta all'impulso</b></li>
@@ -161,7 +192,8 @@
                     Questo modello è utile a descrivere diverse situazioni.
                     Nel nostro caso possiamo pensare lo spazio come una sorta filtro, di sistema che prende in ingresso un <b>segnale(x)</b> e lo trasforma per farlo ascoltare ad un ascoltatore,
                     però con la differenza che questa <b>(x)</b> è in funzione non solo del <b>tempo(t)</b>, ma anche del <b>diagramma di emissione(𐌘)</b>,
-                    che è a sua volta in funzione di due angoli (sistema polare piuttosto che cartesiano) che fanno riferimento a due piani: <b>piano orizzontale(α)</b> e <b>piano verticale(θ)</b>.
+                    che è a sua volta in funzione di due angoli (sistema polare piuttosto che cartesiano) che fanno riferimento a due piani:
+                    <b>piano orizzontale(α)</b> e <b>piano verticale(θ)</b>.
                     Nella funzione di emissione il modulo non ha alcun peso, quindi consideriamo solo azimut e zenit.
                     <ul>
                     <li><b>(𐌘)funzione a tre dimensione che descrive la potenza di emissione della sorgente in una data direzione nello spazio</b></li>
@@ -175,25 +207,7 @@
         </div>
     </section>
 
-Gli aspetti sopra elencati sono tra i più rilevanti nello studio della propagazione negli spazi. Detti così sembrano anche molto semplici, ma considerati da un punto di vista o matematico o di simulazione, anche situazioni molto semplici possono portare a una complessità difficile da trattare sia in forma matematica sia in forma approssimata attravero una simulazione al computer.
 
-Volessimo tradurre questa cosa in una relazione matematica, potremmo dire che l'uscita(y)
-
-Schema generale di un processo di elaborazione di un segnale da parte di un sistema:
-
-(x)ingresso: segnale
-(h)sistema: risposta all'impulso
-(y)uscita: convoluzione tra (x) e (h)
-
-Questo modello è utile a descrivere diverse situazioni.
-Nel nostro caso possiamo pensare lo spazio come una sorta filtro, di sistema che prende in ingresso un segnale(x) e lo trasforma per farlo ascoltare ad un ascoltatore,
-però con la differenza che questa (x) è in funzione non solo del <b>tempo(t)</b>, ma anche del <b>diagramma di emissione(𐌘)</b>,
-che è a sua volta in funzione di due angoli (riferimento polare piuttosto che cartesiano) che fanno riferimento a due piani: piano orizzontale(α) e piano verticale(θ).
-Nella funzione di emissione il modulo non ha alcun peso, quindi consideriamo solo azimut e zenit.
-
-(𐌘)funzione a tre dimensione che descrive la potenza di emissione della sorgente in una data direzione nello spazio
-(α)azimut
-(θ)zenit
 
 
 
