--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -151,7 +151,7 @@
                     Volessimo tradurre questa cosa in una relazione matematica, potremmo dire:
                     <br>
                     <br>
-                    <p class="row justify-content-center">
+                    <p style="text-align:center;">
                     <b>y = x * h</b>
                     </p>
                     <br>
