--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -194,6 +194,32 @@
                     però con la differenza che questa <b>(x)</b> è in funzione non solo del <b>tempo(t)</b>, ma anche del <b>diagramma di emissione(𐌘)</b>,
                     che è a sua volta in funzione di due angoli (sistema polare piuttosto che cartesiano) che fanno riferimento a due piani:
                     <b>piano orizzontale(α)</b> e <b>piano verticale(θ)</b>.
+                  </p>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+      <!-- Image-->
+            <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                <div class="container-fluid">
+                    <div class="row justify-content-center">
+                        <div class="col-12 col-lg-5">
+                            <div class="image-wrapper">
+                                <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/03_sistema_polare.png" alt="www.gabrielavelitch.com">
+                                <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+      <!-- Text-->
+          <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+              <div class="container">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-8">
+                        <p class="mbr-text mbr-fonts-style display-7">
                     Nella funzione di emissione il modulo non ha alcun peso, quindi consideriamo solo azimut e zenit.
                     <ul>
                     <li><b>(𐌘)funzione a tre dimensione che descrive la potenza di emissione della sorgente in una data direzione nello spazio</b></li>
