--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -196,7 +196,7 @@
                     <b>piano orizzontale(α)</b> e <b>piano verticale(θ)</b>. Altro descrittore del <b>segnale(x)</b> è la posizione della <b>sorgente(ρ)</b>, anche lei a sua volta in funzione dei due angoli <b>(α)</b> e <b>(θ)</b>.
                     <br>
                     <br>
-                    Possiamo dunque descrivere la (x) con questa espressione:
+                    Possiamo dunque descrivere la <b>(x)</b> con questa espressione:
                     <br>
                     <br>
                     <p style="text-align:center;">
