--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -208,7 +208,7 @@
                         <div class="col-12 col-lg-5">
                             <div class="image-wrapper">
                                 <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/03_sistema_polare.png" alt="www.gabrielavelitch.com">
-                                <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+                                <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Sistema polare</p>
                             </div>
                         </div>
                     </div>
