--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -151,9 +151,9 @@
                     Volessimo tradurre questa cosa in una relazione matematica, potremmo dire:
                     <br>
                     <br>
-                    <p style="text-align:center;">
+                    <h3 style="text-align:center;">
                     <b>y = x * h</b>
-                    </p>
+                    </h3>
                     <br>
                     <br>
                     Possiamo esprimere questa formula con lo schema generale di un processo di elaborazione di un segnale da parte di un sistema, quale:
@@ -194,7 +194,6 @@
                     però con la differenza che questa <b>(x)</b> è in funzione non solo del <b>tempo(t)</b>, ma anche del <b>diagramma di emissione(𐌘)</b>,
                     che è a sua volta in funzione di due angoli (sistema polare piuttosto che cartesiano) che fanno riferimento a due piani:
                     <b>piano orizzontale(α)</b> e <b>piano verticale(θ)</b>. Altro descrittore del <b>segnale(x)</b> è la <b>posizione della sorgente(ρ)</b>, anche lei a sua volta in funzione dei due angoli <b>(α)</b> e <b>(θ)</b>.
-
                   </p>
                   </div>
               </div>
@@ -233,8 +232,9 @@
                       Possiamo dunque descrivere la <b>(x)</b> con la seguente espressione:
                       <br>
                       <br>
-                      <p style="text-align:center;">
+                      <h3 style="text-align:center;">
                       <b>x = t, 𐌘(α, θ), ρ(α, θ)</b>
+                    </h3>
                 </div>
             </div>
         </div>
