--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -124,25 +124,25 @@
                     <br>
                     <b>Sorgente:</b>
                     <ul>
-                      <li>Tipo di segnale (come è fatto dal punto di vista spettro temporale)</li>
-                      <li>Funzione di direttività o di emissione (qual'è il diagramma di potenza in funzione dell'angolo spaziale)</li>
-                      <li>Posizione</li>
+                      <li><b>Tipo di segnale (come è fatto dal punto di vista spettro temporale)</b></li>
+                      <li><b>Funzione di direttività o di emissione</b> (qual'è il diagramma di potenza in funzione dell'angolo spaziale)</li>
+                      <li><b>Posizione</b></li>
                    </ul>
                   <p class="mbr-text mbr-fonts-style display-7">
                     <b>Ascoltatore:</b>
                     <ul>
-                    <li>Funzione spaziale di ricezione o di sensibilità</li>
-                    <li>Posizione (a seconda della posizione reciproca tra sorgente e ascoltatore ogni volta otterrò una risposta diversa)</li>
+                    <li><b>Funzione spaziale di ricezione o di sensibilità</li>
+                    <li><b>Posizione (a seconda della posizione reciproca tra sorgente e ascoltatore ogni volta otterrò una risposta diversa)</li>
                     </ul>
                     <p class="mbr-text mbr-fonts-style display-7">
                     <b>Spazio:</b>
                     <ul>
-                    <li>Geometria (una delle cose più difficili sta nella generalizzazione di uno spazio con una forma qualunque.
+                    <li><b>Geometria</b> (una delle cose più difficili sta nella generalizzazione di uno spazio con una forma qualunque.
                       Esistono software in grado elaborare geometrie complesse, es. AutoCAD.
                       La sensibilità nei confronti dell'acustica degli ambienti è una situazione abbastanza recente,
                       prima questa attenzione veniva destinata unicamente a spazi destinati ad uso acustico quali sale da concerto, auditorium, studi di registrazione).
                     </li>
-                    <li>Materiali (lo spazio tipicamente è una struttura fatta di materiali diversi; essi hanno un impatto sia sulla capacità di assorbire o riflettere l'energia acustica, sia sulla diffusione dell'energia da un punto di vista spaziale: ogni superficie ha una risposta diversa nei confronti dell'onda acustica che dipende dalla relazione che c'è tra la lunghezza d'onda del campo acustico e le dimensioni del profilo della superficie riflettente).</li>
+                    <li><b>Materiali</b> (lo spazio tipicamente è una struttura fatta di materiali diversi; essi hanno un impatto sia sulla capacità di assorbire o riflettere l'energia acustica, sia sulla diffusione dell'energia da un punto di vista spaziale: ogni superficie ha una risposta diversa nei confronti dell'onda acustica che dipende dalla relazione che c'è tra la lunghezza d'onda del campo acustico e le dimensioni del profilo della superficie riflettente).</li>
                   </ul>
                   <p class="mbr-text mbr-fonts-style display-7">
                     Gli aspetti sopra elencati sono tra i più rilevanti nello studio della propagazione negli spazi, detti così sembrano anche molto semplici, ma considerati da un punto di vista o matematico o di simulazione, anche situazioni molto semplici possono portare a una complessità difficile da trattare sia in forma matematica sia in forma approssimata attravero una simulazione al computer.
