--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -124,7 +124,7 @@
                     <br>
                     <b>Sorgente:</b>
                     <ul>
-                      <li><b>Tipo di segnale (come è fatto dal punto di vista spettro temporale)</b></li>
+                      <li><b>Tipo di segnale</b> (come è fatto dal punto di vista spettro temporale)</b></li>
                       <li><b>Funzione di direttività o di emissione</b> (qual'è il diagramma di potenza in funzione dell'angolo spaziale)</li>
                       <li><b>Posizione</b></li>
                    </ul>
