--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -131,8 +131,8 @@
                   <p class="mbr-text mbr-fonts-style display-7">
                     <b>Ascoltatore:</b>
                     <ul>
-                    <li><b>Funzione spaziale di ricezione o di sensibilità</li>
-                    <li><b>Posizione (a seconda della posizione reciproca tra sorgente e ascoltatore ogni volta otterrò una risposta diversa)</li>
+                    <li><b>Funzione spaziale di ricezione o di sensibilità</b></li>
+                    <li><b>Posizione</b> (a seconda della posizione reciproca tra sorgente e ascoltatore ogni volta otterrò una risposta diversa)</li>
                     </ul>
                     <p class="mbr-text mbr-fonts-style display-7">
                     <b>Spazio:</b>
