--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -224,7 +224,7 @@
                     Nella funzione di emissione il modulo non ha alcun peso, quindi consideriamo solo azimut e zenit.
                     <ul>
                     <li><b>(𐌘)funzione a tre dimensione che descrive la potenza di emissione della sorgente in una data direzione nello spazio</b></li>
-                    <li><b>(ρ)posizione della sorgente</b></li>
+                    <li><b>(ρ)modulo:</b> posizione della sorgente</li>
                     <li><b>(α)azimut</b></b></li>
                     <li><b>(θ)zenit</b></li>
                   </ul>
@@ -233,7 +233,7 @@
                       <br>
                       <br>
                       <h3 style="text-align:center;">
-                      <b>x = t, 𐌘(α, θ), ρ(α, θ)</b>
+                      <b>x = t, 𐌘(α, θ), (ρ, α, θ)</b>
                     </h3>
                 </div>
             </div>
