--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -190,10 +190,15 @@
                   </ul>
                   <p class="mbr-text mbr-fonts-style display-7">
                     Questo modello è utile a descrivere diverse situazioni.
+                    <p>
+                      <br>
+                      <br>
+                      <h3>Variabili del segnale d'ingresso(x)</h3>
+                    <p class="mbr-text mbr-fonts-style display-7">
                     Nel nostro caso possiamo pensare lo spazio come una sorta filtro, di sistema che prende in ingresso un <b>segnale(x)</b> e lo trasforma per farlo ascoltare ad un ascoltatore,
                     però con la differenza che questa <b>(x)</b> è in funzione non solo del <b>tempo(t)</b>, ma anche del <b>diagramma di emissione(𐌘)</b>,
                     che è a sua volta in funzione di due angoli (sistema polare piuttosto che cartesiano) che fanno riferimento a due piani:
-                    <b>piano orizzontale(α)</b> e <b>piano verticale(θ)</b>. Altro descrittore del <b>segnale(x)</b> è la <b>posizione della sorgente(ρ)</b>, anche lei a sua volta in funzione dei due angoli <b>(α)</b> e <b>(θ)</b>.
+                    <b>piano orizzontale(α)</b> e <b>piano verticale(θ)</b>. Altro descrittore del <b>segnale(x)</b> è la <b>posizione della sorgente(ρ, α, θ)</b>.
                   </p>
                   </div>
               </div>
@@ -224,7 +229,7 @@
                     Nella funzione di emissione il modulo non ha alcun peso, quindi consideriamo solo azimut e zenit.
                     <ul>
                     <li><b>(𐌘)funzione a tre dimensione che descrive la potenza di emissione della sorgente in una data direzione nello spazio</b></li>
-                    <li><b>(ρ)modulo:</b> posizione della sorgente</li>
+                    <li><b>(ρ)modulo</b></li>
                     <li><b>(α)azimut</b></b></li>
                     <li><b>(θ)zenit</b></li>
                   </ul>
@@ -235,6 +240,9 @@
                       <h3 style="text-align:center;">
                       <b>x = t, 𐌘(α, θ), (ρ, α, θ)</b>
                     </h3>
+                    <br>
+                    <br>
+                    <h3>Variabili del segnale d'ingresso(x)</h3>
                 </div>
             </div>
         </div>
