--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -194,6 +194,7 @@
                       <br>
                       <br>
                       <h3>Variabili del segnale d'ingresso(x)</h3>
+                      <br>
                     <p class="mbr-text mbr-fonts-style display-7">
                     Nel nostro caso possiamo pensare lo spazio come una sorta filtro, di sistema che prende in ingresso un <b>segnale(x)</b> e lo trasforma per farlo ascoltare ad un ascoltatore,
                     però con la differenza che questa <b>(x)</b> è in funzione non solo del <b>tempo(t)</b>, ma anche del <b>diagramma di emissione(𐌘)</b>,
@@ -242,14 +243,25 @@
                     </h3>
                     <br>
                     <br>
-                    <h3>Variabili del segnale d'ingresso(x)</h3>
+                    <h3>Variabili del sistema(h) e dell'uscita(y)</h3>
+                    <br>
+                    La funzione di tasferimento di questo sistema dipende dalla forma dello spazio <b>G(ρ, α, θ)</b> e dai materiali <b>M(ρ, α, θ)</b>.
+                    Convolvendo il sistema(h) con l'ingresso(x), otteniamo l'uscita(y) che possiamo descrivere in questo modo:
+                    <h3 style="text-align:center;">
+                    <b>y = t, Γ(α, θ), (ρ, α, θ) = h (G(ρ, α, θ), M(ρ, α, θ)) * x (t, 𐌘(α, θ), (ρ, α, θ))</b>
+                  </h3>
+                  <br>
+                  <br>
+                  <ul>
+                  <li><b>(Γ)funzione di sensibilità a tre dimensione che descrive la ricettività</b></li>
+                </ul>
                 </div>
             </div>
         </div>
     </section>
 
 
-
+Γ
 
 
 <!-- Prev/Next-->
