--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -254,6 +254,8 @@
                   <br>
                   <ul>
                   <li><b>(Γ)funzione di sensibilità a tre dimensione che descrive la ricettività</b></li>
+                  <li><b>(G)forma dello spazio</b></li>
+                  <li><b>(M)Materiali</b></li>
                 </ul>
                 </div>
             </div>
