--- a/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -245,7 +245,7 @@
                     <br>
                     <h3>Variabili del sistema(h) e dell'uscita(y)</h3>
                     <br>
-                    La funzione di tasferimento di questo sistema dipende dalla forma dello spazio <b>G(ρ, α, θ)</b> e dai materiali <b>M(ρ, α, θ)</b>.
+                    La funzione di tasferimento di questo sistema dipende dalla <b>forma dello spazio (G(ρ, α, θ))</b> e dai <b>materiali (M(ρ, α, θ))</b>.
                     Convolvendo il <b>sistema(h)</b> con <b>l'ingresso(x)</b>, otteniamo <b>l'uscita(y)</b> che possiamo descrivere in questo modo:
                     <br>
                     <br>
